tweaks from static code analysis